CSS: revert overflow-hidden (fixes #57)

--- a/benchmark/benchmark.css
+++ b/benchmark/benchmark.css
@@ -1,7 +1,6 @@
 body {
     background-color: #eae6d1;
     font-family: sans-serif;
-    overflow: hidden;
 }
 canvas {
     display: block;
