--- a/etoys/etoys.css
+++ b/etoys/etoys.css
@@ -1,7 +1,6 @@
 body {
     background-color: #eae6d1;
     font-family: sans-serif;
-    overflow: hidden;
 }
 canvas {
     position: absolute;
